# TEMPO

./: .gitignore  README.md  benchmark_enrichment.py  build_notebook.py  build_vignette.py  dev_notebook.ipynb  pyproject.toml  test_real_data.py  vignette.ipynb  viz_olink.py
tempo/: __init__.py  datasets.py  harbinger.py  preprocess.py  simulate.py  stats.py  viz.py
tempo/data/: example_longitudinal.csv
tests/: test_harbinger.py  test_preprocess.py  test_simulate.py  test_stats.py  test_viz.py
