[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tempo-bio"
version = "0.1.0"
description = "Trajectory Enrichment via Matrix Profile Outcomes: Harbinger analysis for longitudinal biological data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["bioinformatics", "microbiome", "time-series", "matrix-profile", "longitudinal", "motif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "stumpy>=1.12",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
survival = ["lifelines>=0.27"]
dev = ["pytest", "pytest-cov", "jupyter", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/cbumby17/TEMPO"
Documentation = "https://github.com/cbumby17/TEMPO"
Issues = "https://github.com/cbumby17/TEMPO/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tempo*"]

[tool.setuptools.package-data]
tempo = ["data/*.csv"]
